--- a/index.html
+++ b/index.html
@@ -4,11 +4,20 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta http-equiv="refresh" content="0; url=appbase/index.html">
-  <title>Projeto Marco</title>
+  <title>5Horas • MiniApps</title>
   <script>
     // fallback JS redirect
     location.replace("appbase/index.html");
   </script>
 </head>
-<body></body>
+<body><div style="width:100%;max-width:1200px;margin:0 auto">
+  <iframe
+    src="https://fabiocolletto.github.io/MiniApp-base/"
+    style="width:100%;height:85vh;border:0;overflow:auto"
+    loading="lazy"
+    referrerpolicy="no-referrer"
+    allowfullscreen>
+  </iframe>
+</div>
+</body>
 </html>
